[package]
name = "rofld"
version = "0.1.0"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
description = "Lulz on demand"
documentation = "https://github.com/Xion/rofld"
homepage = "https://github.com/Xion/rofld"
repository = "https://github.com/Xion/rofld"
readme = "README.md"
license = "GPLv2"

build = "build.rs"

[dependencies]
ansi_term = "0.9"
clap = { version = "2.19", features = ["suggestions"] }
conv = "0.3"
futures = "0.1"
futures-cpupool = "0.1"
glob = "0.2"
# TODO: change to hyper from crates.io when the async version is released
hyper = { git = "https://github.com/hyperium/hyper.git" }
image = "0.12"
isatty = "0.1.1"
lazy_static = "*"
log = "*"
lru-cache = "0.1"
maplit = "0.1"
mime = "0.2"
num = "0.1"
rusttype = "0.2"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
serde_qs = "0.0.2"
slog = "*"
slog-envlogger = "0.5"
slog-stdlog = "*"
slog-stream = "1.2"
tokio-signal = "0.1"
time = "0.1"
try_opt = "*"

[profile.release]
lto = true
