[package]
name = "roflsh"
version = "0.0.1"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
description = "Lulz in the shell"
documentation = "https://github.com/Xion/rofld"
homepage = "https://github.com/Xion/rofld"
repository = "https://github.com/Xion/rofld"
readme = "README.md"
license = "GPLv2"

[badges]
travis-ci = { repository = "Xion/rofld" }

[[bin]]
name = "roflsh"
path = "main.rs"

[dependencies]
ansi_term = "0.9"
clap = { version = "2.19", features = ["suggestions"] }
conv = "0.3"
enum_derive = "0.1"
exitcode = "1.0"
isatty = "0.1.1"
lazy_static = "*"
log = "*"
macro-attr = "0.2"
maplit = "0.1"
nom = "3.1"
rofl = { path = "../lib" }
serde_json = "1.0"
slog = "1.5.2"
slog-envlogger = "0.5"
slog-stdlog = "1.1"
slog-stream = "1.2"
time = "0.1"

[dev-dependencies]
spectral = "0.6.0"
