[package]
name = "rofl"
version = "0.0.1"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
description = "Lulz on demand"
documentation = "https://github.com/Xion/rofld"
homepage = "https://github.com/Xion/rofld"
repository = "https://github.com/Xion/rofld"
readme = "../README.md"
license = "BSD"

[lib]
name = "rofl"
path = "lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
color_quant = "1.0"
conv = "0.3"
# TODO: change to crates.io version when a new version is published
css-color-parser = { git = "https://github.com/7thSigil/css-color-parser-rs.git" }
derive-error = "0.0.3"
enum_derive = "*"
gif = "0.9"
gif-dispose = "1.0.1"
glob = "0.2"
image = "0.12"
itertools = "0.6"
lazy_static = "*"
log = "*"
lru-cache = "0.1"
macro-attr = "0.2"
maplit = "0.1"
mime = "0.3"
newtype_derive = "0.1"
num = "0.1"
rand = "0.3"
regex = "*"
rusttype = "0.2"
serde = "1.0"
serde_derive = "1.0"
time = "0.1"
try_opt = "*"
unicode-normalization = "0.1"
unreachable = "0.1"

[dev-dependencies]
serde_json = "1.0"
# TODO: change to crates.io when a version is published with a fix to
# https://github.com/samscott89/serde_qs/issues/7
serde_qs = { git = "https://github.com/samscott89/serde_qs.git", rev = "071affd963ed88bfdcede6aa7b20626d3cf0f368" }
serde_test = "1.0"
spectral = "0.6.0"
