[package]
name = "rofl"
version = "0.0.1"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
description = "Lulz on demand"
keywords = ["meme", "image-macro", "caption", "gif", "image-processing"]
categories = ["multimedia::images", "visualization"]
documentation = "https://docs.rs/rofl"
homepage = "https://github.com/Xion/rofld"
repository = "https://github.com/Xion/rofld"
readme = "README.md"
license = "BSD-3-Clause"

[badges]
travis-ci = { repository = "Xion/rofld" }

[lib]
name = "rofl"
path = "lib.rs"
crate-type = ["dylib", "rlib"]

[dependencies]
antidote = "1.0"
color_quant = "1.0"
conv = "0.3"
css-color-parser = "0.1.2"
derive_builder = { version = "0.4", features = ["private_fields"] }
derive-error = "0.0.3"
enum_derive = "0.1"
either = "1.1"
float-ord = "0.1"
gif = "0.9"
gif-dispose = "1.0.1"
glob = "0.2"
image = "0.12"
itertools = "0.6"
lazy_static = "0.2"
log = "0.3"
lru-cache = "0.1"
macro-attr = "0.2"
maplit = "0.1"
mime = "0.3"
newtype_derive = "0.1"
num = "0.1"
rand = "0.3"
regex = "0.2"
rusttype = "0.2"
serde = "1.0"
serde_derive = "1.0"
time = "0.1"
try_opt = "0.1"
unicode-normalization = "0.1"
unreachable = "0.1"

[dev-dependencies]
serde_json = "1.0"
serde_qs = "0.3"
serde_test = "1.0"
spectral = "0.6.0"
