[package]
name = "rofld"
version = "0.0.1"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
description = "Lulz server"
documentation = "https://github.com/Xion/rofld"
homepage = "https://github.com/Xion/rofld"
repository = "https://github.com/Xion/rofld"
readme = "README.md"
license = "GPLv2"
publish = false

[badges]
travis-ci = { repository = "Xion/rofld" }

[[bin]]
name = "rofld"
path = "main.rs"

[dependencies]
antidote = "1.0"
atomic = "0.3"
ansi_term = "0.9"
clap = { version = "2.19", features = ["suggestions"] }
conv = "0.3"
derive-error = "0.0.3"
enum_derive = "*"
enum-set = "*"
exitcode = "1.0"
futures = "0.1"
futures-cpupool = "0.1"
glob = "0.2"
# TODO: change to hyper from crates.io when the async version is released
hyper = { git = "https://github.com/hyperium/hyper.git" }
isatty = "0.1.1"
itertools = "0.6"
lazy_static = "*"
log = "*"
macro-attr = "0.2"
maplit = "0.1"
mime = "0.3"
nix = "0.8"
num = "0.1"
rand = "0.3"
regex = "0.2"
rofl = { path = "../lib" }
serde = "1.0"
serde_json = "1.0"
serde_qs = "0.2.1"
slog = "1.5.2"
slog-envlogger = "0.5"
slog-stdlog = "1.1"
slog-stream = "1.2"
thread-id = "3.1"
tokio-core = "0.1"
tokio-signal = "0.1"
tokio-timer = "0.1"
time = "0.1"
unreachable = "0.1"

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
spectral = "0.6.0"
